src/styles/index.css
/* ... */
@layer utilities {
  [class*='space-x-'] {
    @apply rtl:space-x-reverse;
  }
}

.code-step * {
  color: inherit !important;
}

.code-step code {
  background: none !important;
  padding: 2px !important;
}

.dark .console-block code {
  background: rgba(235 236 240 / 0.05) !important;
  color: rgba(208, 125, 119) !important;
}

.console-block code {
  background: rgba(235 236 240 / 0.95) !important;
  color: rgb(166, 66, 58) !important;
}

html.dark .code-step * {
  color: inherit !important;
}

.mdx-heading {
  scroll-margin-top: calc(4rem + 20px);
  /* Space for the anchor */
  padding-inline-end: 1em;
}

.mdx-heading:before {
  height: 6rem;
  margin-top: -6rem;
  visibility: hidden;
  content: '';
}
.mdx-heading .mdx-header-anchor {
  /* Prevent the anchor from
     overflowing to its own line */
  height: 0px;
  width: 0px;
}
.mdx-heading .mdx-header-anchor svg {
  display: inline;
}
.mdx-heading .mdx-header-anchor svg {
  visibility: hidden;
}
.mdx-heading:hover .mdx-header-anchor svg {
  visibility: visible;
}
.mdx-heading .mdx-header-anchor:focus svg {
  visibility: visible;
}

.mdx-blockquote > span > p:first-of-type {
  margin-bottom: 0;
}
.mdx-blockquote > span > p:last-of-type {
  margin-bottom: 1rem;
}
.mdx-illustration-block {
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: center;
  align-content: stretch;
  align-items: stretch;
  gap: 42px;
}
ol.mdx-illustration-block {
  gap: 60px;
}
.mdx-illustration-block li {
  display: flex;
  align-items: flex-start;
  align-content: stretch;
  justify-content: space-around;
  position: relative;
  padding: 1rem;
}
.mdx-illustration-block figure {
  display: flex;
  flex-direction: column;
  align-content: center;
  align-items: center;

  justify-content: space-between;
  position: relative;
  height: 100%;
}
.mdx-illustration-block li:after {
  content: ' ';
  display: block;
  position: absolute;
  top: 50%;
  inset-inline-end: 100%;
  transform: translateY(-50%);
  width: 60px;
  height: 49px;
  background: center / contain no-repeat url('/images/g_arrow.png');
}
.mdx-illustration-block li:first-child:after {
  content: ' ';
  display: none;
}
.mdx-illustration-block img {
  max-height: 250px;
  width: 100%;
}
@media (max-width: 680px) {
  .mdx-illustration-block {
    flex-direction: column;
  }
  .mdx-illustration-block img {
    max-height: 200px;
    width: auto;
  }
  .mdx-illustration-block li:after {
    top: 0;
    inset-inline-start: 50%;
    inset-inline-end: auto;
    transform: translateX(-50%) translateY(-100%) rotate(90deg);
  }
}

@keyframes fadein {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

.animation-pulse-button {
  animation: pulse-button 2s infinite;
}

.animation-pulse-shadow {
  animation: pulse-shadow 2s infinite;
}

@keyframes pulse-button {
  0% {
    transform: scale(0.9);
  }
  70% {
    transform: scale(1);
  }
  100% {
    transform: scale(0.9);
  }
}

@keyframes pulse-shadow {
  0% {
    transform: scale(0.65);
    opacity: 1;
  }

  70% {
    transform: scale(1);
    opacity: 0;
  }

  100% {
    transform: scale(0.65);
    opacity: 0;
  }
}

@keyframes progressbar {
  from {
    width: 0;
  }
  to {
    width: 100%;
  }
}

.uwu-visible {
  display: none;
}
.uwu-hidden {
  display: flex;
}

.uwu .uwu-visible {
  display: flex;
}

.uwu .uwu-hidden {
  display: none;
}

